# BotC-

./: CMakeLists.txt  build.bat  build.sh  start.bat
src/: BotCore.cpp  BotCore.h  Database.cpp  Database.h  main.cpp
